Updated css files for 7 items overflow Fixed format error

--- a/ui-resources/plugins/contextmenu/styles/chrome.css
+++ b/ui-resources/plugins/contextmenu/styles/chrome.css
@@ -67,12 +67,18 @@ body {
     background-image: url('../assets/drag_bar.png');
 }
 
+.showMoreActionsHandle {
+    height: 119px;
+    width: 121px;
+    background-image: url('../assets/ActionOverflowMenu.png');
+}
+
 /* Show and hid the menu items themselves */
 .showItem {
     -webkit-transform:translate(-462px,0);
     z-index:101;
 }
-
+ 
 .peekItem {
     -webkit-transform:translate(0px,0);
 }
@@ -104,10 +110,10 @@ body {
     border-top: 2px solid #414141;
 }
 
-    .menuItem img {
-        margin: 20px 19px;
-        vertical-align: middle;
-    }
+.menuItem img {
+    margin: 20px 19px;
+    vertical-align: middle;
+}
 
 .menuItem:active {
     border-image: url('../assets/core_crosscutmenu_selected.png') 2 1 2 13 / 1 1 1 1;
